# seymourLife

./: .gitignore  .woodpecker.yml  Cargo.toml  Cli.py  Device.py  DeviceLog.py  GPIOFacade.py  LogFacade.py  OutputFacade.py  README.md  TerminalFacade.py  ThreadSafeCounter.py  build_requirements.md  log-containing-uboot-prompt.txt  notes.md  shell.nix
.forgejo/workflows/: buildTest.yaml  buildcheck.yaml  demo.yaml
src/: device.rs  gpio_facade.rs  lib.rs  log_facade.rs  main.rs  tty.rs
