#cargo-features = ["per-package-target"]

[package]
name = "seymour_poc_rust"
version = "2.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
serialport = "4.2.0"
log = "0.4"
fern = "0.6.2"
chrono = "0.4.24"
once_cell = "1.17.1"
derivative = "2.2.0"
time = "0.2.23"
clap = { version = "4.3.2", features = ["derive"] }

[dev-dependencies]
time = "0.2.23"
